# revbridge

./: .gitignore  CONTRIBUTING.md  DEVELOP.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  gradle.properties  settings.gradle
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/innocent254/revbridge/: Binary.java  CIDR.java  Forwarder.java  (+12 more)
app/src/main/res/drawable/: ic_revbridge.xml  ic_revbridge_foreground.xml  ic_revbridge_monochrome.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/mipmap-anydpi-v33/: ic_launcher_round.xml
app/src/main/res/values/: icon_colors.xml  strings.xml
app/src/main/res/values-fr/: strings.xml
desktop/: package-lock.json  package.json  tsconfig.node.json  tsconfig.renderer.json  vitest.config.ts
desktop/src/main/: controller.ts  main.ts  preload.ts
desktop/src/main/services/: adb.ts  assets.ts  command-runner.ts  relay.ts  settings-store.ts
desktop/src/renderer/: index.html  main.ts  styles.css
desktop/src/shared/: types.ts
desktop/test/: adb.test.ts  controller.test.ts  settings-store.test.ts
docs/: ARCHITECTURE.md  RELEASING.md  TROUBLESHOOTING.md
gradle/wrapper/: gradle-wrapper.properties
relay-rust/: Cargo.toml
relay-rust/src/: main.rs
relay-rust/src/relay/: client.rs  ipv4_packet.rs  ipv4_packet_buffer.rs  packet_source.rs  packetizer.rs  tcp_connection.rs
(+1 files in other folders)
