[package]
name = "revbridge-relay"
version = "0.1.0-alpha.1"
authors = [
    "Romain Vimont <rom@rom1v.com>",
    "Innocent Cheng'ole Were"
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Innocent254/revbridge"
description = "Native IPv4 relay for RevBridge Android USB reverse tethering"
rust-version = "1.82"

[lib]
name = "relaylib"
path = "src/lib.rs"

[dependencies]
mio = "1.2"       # for async I/O
slab = "0.4"      # helper for mio Tokens
log = "0.4"       # for logs
chrono = "0.4"    # for formatting timestamp in logs
byteorder = "1.3" # for reading/writing binary
rand = "0.7"      # for random TCP sequence number
ctrlc = { version = "3.0", features = ["termination"] }     # for handling Ctrl+C

[profile.release]
lto = true     # link-time optimization
